# odi

./: .gitignore  .travis.yml  LICENSE  README.md
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: integration_test.yml  java_ci.yml  pre-commit.yml  python_sdk_ci.yml  python_skd_ci.yml
client/: index.html
python-sdk/: .gitlint  .pre-commit-config.yaml  README.md  requirements.txt  requirements_linter.txt  requirements_tests.txt  setup.cfg  setup.py
python-sdk/odi/: __init__.py  __version__.py  exception.py
python-sdk/odi/cache/: __init__.py  cache.py  file_cache.py
python-sdk/odi/cli/: __init__.py  cli.py  context.py
python-sdk/odi/cli/command/: __init__.py  auth.py  cli.py  pull.py  search.py  version.py
python-sdk/odi/cli/tests/: __init__.py  test_cli.py
python-sdk/odi/client/: __init__.py  entry.py  request.py  storage.py
python-sdk/odi/client/auth/: __init__.py  auth.py  user.py
python-sdk/odi/client/storage/: __init__.py  s3.py  storage.py
python-sdk/odi/client/task/: __init__.py
python-sdk/odi/dataset/: dataset.py
python-sdk/odi/util/: __init__.py  ui.py
python-sdk/tests/: test_ci.py  test_cli.py
server/: build.gradle  settings.gradle
server/src/main/java/io/openBytes/odi/: Application.java
server/src/main/java/io/openbytes/odi/: Application.java  BizException.java  CodeAndMessage.java
server/src/main/java/io/openbytes/odi/application/: DatasetFileService.java  DatasetService.java  GithubService.java  TokenService.java  UserService.java
server/src/main/resources/: application-local.properties  application.properties  logback-spring.xml
server/src/main/resources/db/mysql/: V2112141100__init.sql  V2201141559__add_user.sql  V2201201125__add_usertoken.sql  V2201261125__add_tag.sql
server/src/test/: testhttp.http
server/src/test/resources/: application-local.properties
(+54 files in other folders)
